...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="na6-hT-5DE" id="cjF-d8-gMl">
                                            <frame key="frameInset" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lFg-MO-sfg">
                                                    <frame key="frameInset" minX="15" width="345" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                        </connections>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="NKJViewControllerTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="0BB-5W-7fA" id="B3X-sq-Hob"/>
                            <outlet property="delegate" destination="0BB-5W-7fA" id="LJZ-HS-BoX"/>
                        </connections>
                    </tableView>
...
                    <view key="view" contentMode="scaleToFill" id="Mbx-oR-6Lr">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eac-pv-mwQ">
                                <frame key="frameInset" minX="20" minY="32" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Button"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="buttonDidTap:" destination="KYH-7Q-gjg" eventType="touchUpInside" id="tvv-dB-d8q"/>
                                </connections>
                            </button>
                        </subviews>
...
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ModalTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="ph0-XQ-NAC" id="8SQ-Ut-jtf"/>
                            <outlet property="delegate" destination="ph0-XQ-NAC" id="41l-1W-P8w"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="modal" id="Vuw-1B-sUd" userLabel="ModalNavigationBar">
                        <barButtonItem key="leftBarButtonItem" title="Close" id="Mdl-Tp-mze">
                            <connections>
                                <action selector="closeButtonDidTap:" destination="ph0-XQ-NAC" id="dz6-ER-Q3p"/>
                            </connections>
                        </barButtonItem>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ModalNavigationBar"/>
...
